Chore : JUnit 5,AssertJ 그래들에 추가

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,13 @@ repositories {
 
 dependencies {
     implementation 'com.github.woowacourse-projects:mission-utils:1.2.0'
+
+    // JUnit 5 (Jupiter)
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+
+    // AssertJ
+    testImplementation 'org.assertj:assertj-core:3.25.3'
 }
 
 test {
